test/types/string/bradc/string2complex/badStringToComplex7.good
badStringToComplex7.chpl:3: error: Unexpected character when converting from string to complex(64): ' '
