test/types/string/bradc/string2complex/badStringToComplex7.chpl
var s = "1.2 + 3.4 i";

var c = s:complex(64);
